# Leo-one

./: .env.example  docker-compose.yml
agent/: CMakeLists.txt
agent/include/: leo_agent.h
agent/platform/linux/: crypto_linux.c  crypto_linux.h  executor_linux.c  executor_linux.h  metrics_linux.c  service_linux.c  service_linux.h
agent/src/: agent.c  agent.h  config.c  config.h  connection.c  connection.h  logger.c  logger.h  main.c  metrics.c  metrics.h  protocol.c  protocol.h
backend/: go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/domain/agent/: agent.go
backend/internal/domain/metric/: metric.go
backend/internal/domain/tenant/: tenant.go
backend/internal/infrastructure/persistence/postgres/: agent_repo.go  metric_repo.go  tenant_repo.go
backend/internal/infrastructure/websocket/: client.go  dispatcher.go  hub.go
backend/internal/interfaces/http/: deps.go  middleware.go  router.go
backend/internal/interfaces/http/handlers/: agent_handler.go  alert_handler.go  auth_handler.go  dashboard_handler.go  metric_handler.go  stub_handler.go
backend/internal/interfaces/http/httpctx/: httpctx.go
backend/internal/interfaces/ws/: agent_ws_handler.go
backend/internal/pkg/auth/: jwt.go
backend/internal/pkg/response/: response.go
backend/migrations/: 001_init_schema.sql  002_timescaledb_hypertables.sql  003_rbac_seed.sql
backend/pkg/config/: config.go
backend/pkg/logger/: logger.go
docs/: phase1_architecture.html  phase1_architecture.odt  phase2_arborescence.html  phase2_arborescence.odt  phase3_bdd_api.html  phase3_bdd_api.odt  phase4_boilerplate.html  phase4_boilerplate.odt  wireframes_phase5.txt
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: agents.ts  client.ts  metrics.ts
frontend/src/components/agents/: AgentCommandModal.tsx  AgentDetailPanel.tsx  AgentStatusBadge.tsx  AgentTable.tsx
frontend/src/components/dashboard/: AgentStatusChart.tsx  RecentAlerts.tsx  StatCard.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/metrics/: CpuChart.tsx  DiskUsageBar.tsx  MetricsGrid.tsx  RamChart.tsx
frontend/src/hooks/: useAgents.ts  useMetrics.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: AgentDetailPage.tsx  AgentsPage.tsx  DashboardPage.tsx  LoginPage.tsx
frontend/src/store/: auth.store.ts  ui.store.ts  ws.store.ts
frontend/src/types/: agent.ts  alert.ts  api.ts  metric.ts  user.ts
infra/docker/: backend.Dockerfile  frontend.Dockerfile
infra/docker/postgres/: 01_init.sql  02_run_migrations.sh
scripts/: dev.sh  migrate.sh
